--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-window": "^1.8.9",
     "typescript": "^4.9.5",
+    "vite": "^4.3.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
