--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.9",
+    "string-similarity": "^4.0.4",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
     "vite": "^4.3.4",
